...

// MARK: - Task Frequency

enum TaskFrequency: String, Codable, CaseIterable, Identifiable {
    case unscheduled = "No Schedule"
    case daily = "Daily"
    case twiceWeekly = "Twice Weekly"
    case weekly = "Weekly"
    case biweekly = "Biweekly"
    case monthly = "Monthly"
    case quarterly = "Quarterly"
    case semiannually = "Semi-Annually"
    case yearly = "Yearly"
...
